Apply caption styles only when not in fullscreen. Fixes Chrome fullscreen issue where caption text is positioned offscreen when font size is too small.

--- a/less/plugins/adapt-contrib-media/mep.less
+++ b/less/plugins/adapt-contrib-media/mep.less
@@ -255,7 +255,7 @@
 
   // Closed captions
   // --------------------------------------------------
-  video::cue {
+  &:not(.mejs__container-fullscreen) video::cue {
     font-size: @body-size;
     line-height: @body-line-height;
     background-color: @black;
